src/scss/components/_typography.scss
//LANDING PAGE HEAD SECTION
.hero-name {
  font-weight: bold;
}
.hero-desc {
  padding-bottom: 0.1rem;
  margin: 0;

  &:last-of-type {
    padding-bottom: 1rem;
  }

  @include media-breakpoint-up(md) {
    padding-bottom: 0.7rem;
  }
}

//INTRO TEXT
.introText {
  color: white;
  margin-bottom: 0;
  text-align: center;
  font-size: 0.875rem;

  @include media-breakpoint-up(lg) {
    padding: 2rem 0;
    font-size: 1.2rem;
  }
  @include media-breakpoint-up(xxl) {
    padding: 3rem 0;
    font-size: 1.3rem;
  }
}

.introHeader {
  text-align: center;
  color: white;
  margin: 0 !important;
  padding-top: 1rem;

  @include media-breakpoint-up(lg) {
    padding-top: 2rem;
  }
}

//HEADER

.header {
  font-weight: bold;

  @include media-breakpoint-up(lg) {
    margin: 1rem 0;
    padding-top: 2rem;
  }
}

//BASIC TEXT
.basic-text {
  text-align: justify;
  font-size: 0.875rem;

  @include media-breakpoint-up(lg) {
    font-size: 1rem;
  }
}

//FORM:

.form-check-label {
  font-size: 0.7rem;
}

//CONTACT & FOOTER

.footer-text {
  font-size: 0.875rem;
  color: white;
  display: inline;
  margin: 0;

  @include media-breakpoint-up(md) {
    font-size: 1rem;
  }
}

.error-text {
  color: $red-400;
  font-size: 0.8rem;
  position: absolute;
  top: 2.2rem;
}

.error-consent {
  color: $red-400;
  font-size: 0.8rem;
  position: absolute;
  top: 3rem;
}

